--- a/GerenciadorTemakeria/WebContent/WEB-INF/templates/template.xhtml
+++ b/GerenciadorTemakeria/WebContent/WEB-INF/templates/template.xhtml
@@ -8,29 +8,55 @@
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 
-	<meta name="keywords"
-		content="simple #2, template, simpletemplates.org" />
-	<meta name="description" content="Sistema de gerenciamento" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
-	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700'
-		rel='stylesheet' type='text/css' />
-	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
+	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
+
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css' />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/simple-line-icons.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/uniform.default.css" />
+	<link rel="stylesheet" type="text/css" href="css/components-rounded.css" />
+	<link rel="stylesheet" type="text/css" href="css/plugins.css" />
+	<link rel="stylesheet" type="text/css" href="css/layout.css" />
+	<link rel="stylesheet" type="text/css" href="css/default.css" />
+	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+
+	<script src="js/jquery.min.js" type="text/javascript"/>
+	<script src="js/jquery-migrate.min.js" type="text/javascript"/>
+	<script src="js/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="js/bootstrap.min.js" type="text/javascript"></script>
+	<script src="js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
+	<script src="js/jquery.slimscroll.min.js" type="text/javascript"></script>
+	<script src="js/jquery.blockui.min.js" type="text/javascript"></script>
+	<script src="js/jquery.cokie.min.js" type="text/javascript"></script>
+	<script src="js/jquery.uniform.min.js" type="text/javascript"></script>
+	<script src="js/metronic.js" type="text/javascript"></script>
+	<script src="js/layout.js" type="text/javascript"></script>
+	<script src="js/demo.js" type="text/javascript"></script>
+	
 	
 </h:head>
-
 <h:body>
-	<h:panelGroup id="panelGeral">
-		<div id="main">
-			<h:panelGroup id="panelHeader">
+			<div class="page-header">
 				<ui:include src="/WEB-INF/templates/header.xhtml" />
-			</h:panelGroup>
-			<div class="content">
+			</div>
+			<div class="page-container">
 				<ui:insert name="conteudo" />
 			</div>
-			<h:panelGroup id="panelFooter">
+			<div >
 				<ui:include src="/WEB-INF/templates/footer.xhtml" />
-			</h:panelGroup>
-		</div>
-	</h:panelGroup>
+			</div>
+	
+	<script>
+      jQuery(document).ready(function() {    
+		Metronic.init(); // init metronic core components
+		Layout.init(); // init current layout
+		Demo.init(); // init demo features
+		      });
+   </script>
+	
 </h:body>
+ 
 </html>
