--- a/GerenciadorTemakeria/WebContent/css/style.css
+++ b/GerenciadorTemakeria/WebContent/css/style.css
@@ -120,3 +120,9 @@ padding: 10px;
 .left { float: left; }
 .right { float: right; }
 .clear { clear: both; padding: 0 0 10px 0; }
+
+.divider{
+    width:5px;
+    height:auto;
+    display:inline-block;
+}
