Commits de template

--- a/GerenciadorTemakeria/WebContent/WEB-INF/templates/header.xhtml
+++ b/GerenciadorTemakeria/WebContent/WEB-INF/templates/header.xhtml
@@ -33,39 +33,13 @@
 					<li class="active"><a href="dashboard.xhtml">Dashboard</a></li>
 
 					<li class="menu-dropdown classic-menu-dropdown ">
-						<a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="dropdown">
-						 Gerenciamento<i class="fa fa-angle-down"></i>
+						<a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="">
+						 Produtos<i class="fa fa-angle-down"></i>
 						</a>
 						<ul class="dropdown-menu pull-left">
 							<li class=" dropdown-submenu">
-								<a href=":;">
-								<i class="icon-briefcase"></i>
-								Produtos </a>
-								<ul class="dropdown-menu">
-									<li class=" ">
-										<a href="cadastroProduto.xhtml">
-										Cadastro de Produtos </a>
-									</li>
-									<li class=" ">
-										<a href="table_tree.html">
-										Controle de Estoque </a>
-									</li>
-								</ul>
-							</li>
-							<li class=" dropdown-submenu">
-								<a href=":;">
-								<i class="icon-wallet"></i>
-								Vendas </a>
-								<ul class="dropdown-menu">
-									<li class=" ">
-										<a href="portlet_general.html">
-										Consulta de Vendas </a>
-									</li>
-									<li class=" ">
-										<a href="portlet_ajax.html">
-										Faturamento </a>
-									</li>
-								</ul>
+								<a href="cadastroProduto.xhtml"> <i class="icon-basket"></i> Cadastro de Produtos </a>
+								<a href=""> <i class="icon-briefcase"></i> Controle de Estoque </a>
 							</li>
 						</ul>
 					</li>
