--- a/GerenciadorTemakeria/WebContent/WEB-INF/templates/template.xhtml
+++ b/GerenciadorTemakeria/WebContent/WEB-INF/templates/template.xhtml
@@ -12,19 +12,27 @@
 	<meta content="width=device-width, initial-scale=1.0" name="viewport" />
 	<meta http-equiv="Content-type" content="text/html; charset=utf-8" />
 
+	<!-- Core CSS -->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css' />
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/simple-line-icons.min.css" />
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="css/uniform.default.css" />
-	<link rel="stylesheet" type="text/css" href="css/components-rounded.css" />
-	<link rel="stylesheet" type="text/css" href="css/plugins.css" />
 	<link rel="stylesheet" type="text/css" href="css/layout.css" />
 	<link rel="stylesheet" type="text/css" href="css/default.css" />
 	<link rel="stylesheet" type="text/css" href="css/custom.css" />
+	<link rel="stylesheet" type="text/css" href="css/components-rounded.css" />
+	<link rel="stylesheet" type="text/css" href="css/plugins.css" />
+	
+	<!-- Page CSS -->
+	<link rel="stylesheet" type="text/css" href="css/dataTables.bootstrap.css" />
+	<link rel="stylesheet" type="text/css" href="css/select2.css" />
+	<link rel="stylesheet" type="text/css" href="css/components-md.css" />
+	<link rel="stylesheet" type="text/css" href="css/plugins-md.css" />
 
-	<script src="js/jquery.min.js" type="text/javascript"/>
-	<script src="js/jquery-migrate.min.js" type="text/javascript"/>
+	<!-- Core plugins -->
+	<script src="js/jquery.min.js" type="text/javascript" />
+	<script src="js/jquery-migrate.min.js" type="text/javascript" />
 	<script src="js/jquery-ui.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
@@ -32,31 +40,37 @@
 	<script src="js/jquery.blockui.min.js" type="text/javascript"></script>
 	<script src="js/jquery.cokie.min.js" type="text/javascript"></script>
 	<script src="js/jquery.uniform.min.js" type="text/javascript"></script>
+
+	<!-- Page plugins -->
+	<script src="js/select2.min.js" type="text/javascript"></script>
+	<script src="js/jquery.dataTables.min.js" type="text/javascript"></script>
+	<script src="js/dataTables.bootstrap.js" type="text/javascript"></script>
 	<script src="js/metronic.js" type="text/javascript"></script>
 	<script src="js/layout.js" type="text/javascript"></script>
 	<script src="js/demo.js" type="text/javascript"></script>
-	
-	
+	<script src="js/table-editable.js" type="text/javascript"></script>
+
 </h:head>
 <h:body>
-			<div class="page-header">
-				<ui:include src="/WEB-INF/templates/header.xhtml" />
-			</div>
-			<div class="page-container">
-				<ui:insert name="conteudo" />
-			</div>
-			<div >
-				<ui:include src="/WEB-INF/templates/footer.xhtml" />
-			</div>
-	
+	<div class="page-header">
+		<ui:include src="/WEB-INF/templates/header.xhtml" />
+	</div>
+	<div class="page-container">
+		<ui:insert name="conteudo" />
+	</div>
+	<div>
+		<ui:include src="/WEB-INF/templates/footer.xhtml" />
+	</div>
+
 	<script>
-      jQuery(document).ready(function() {    
-		Metronic.init(); // init metronic core components
+	jQuery(document).ready(function() {       
+		   Metronic.init(); // init metronic core components
 		Layout.init(); // init current layout
 		Demo.init(); // init demo features
-		      });
+		   TableEditable.init();
+		});
    </script>
-	
+
 </h:body>
- 
+
 </html>
