Implementacao do crude de mesas.
Implementacao do crude de mesas.

--- a/GerenciadorTemakeria/WebContent/WEB-INF/templates/header.xhtml
+++ b/GerenciadorTemakeria/WebContent/WEB-INF/templates/header.xhtml
@@ -34,6 +34,18 @@
 
 					<li class="menu-dropdown classic-menu-dropdown ">
 						<a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="">
+						 Mesas<i class="fa fa-angle-down"></i>
+						</a>
+						<ul class="dropdown-menu pull-left">
+							<li class="dropdown-submenu">
+								<a href="cadastroMesas.xhtml"> <i class="icon-basket"></i> Cadastro de Mesas </a>
+							</li>
+						</ul>
+					</li>
+
+
+					<li class="menu-dropdown classic-menu-dropdown ">
+						<a data-hover="megamenu-dropdown" data-close-others="true" data-toggle="">
 						 Produtos<i class="fa fa-angle-down"></i>
 						</a>
 						<ul class="dropdown-menu pull-left">
