--- a/GerenciadorTemakeria/WebContent/WEB-INF/templates/template.xhtml
+++ b/GerenciadorTemakeria/WebContent/WEB-INF/templates/template.xhtml
@@ -5,6 +5,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	xmlns:p="http://primefaces.org/ui"
+	xmlns:pe="http://primefaces.org/ui/extensions"
 	xmlns:f="http://java.sun.com/jsf/core">
 <h:head>
 
@@ -31,13 +32,11 @@
 	<link rel="stylesheet" type="text/css" href="css/plugins-md.css" />
 
 	<!-- Core plugins -->
-	<script src="js/jquery.min.js" type="text/javascript" />
 	<script src="js/jquery-migrate.min.js" type="text/javascript" />
 	<script src="js/jquery-ui.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap.min.js" type="text/javascript"></script>
 	<script src="js/bootstrap-hover-dropdown.min.js" type="text/javascript"></script>
 	<script src="js/jquery.slimscroll.min.js" type="text/javascript"></script>
-	<script src="js/jquery.blockui.min.js" type="text/javascript"></script>
 	<script src="js/jquery.cokie.min.js" type="text/javascript"></script>
 	<script src="js/jquery.uniform.min.js" type="text/javascript"></script>
 
@@ -49,6 +48,8 @@
 	<script src="js/layout.js" type="text/javascript"></script>
 	<script src="js/demo.js" type="text/javascript"></script>
 	<script src="js/table-editable.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
+	
 
 </h:head>
 <h:body>
@@ -68,7 +69,6 @@
 		   Layout.init(); // init current layout
 		   Demo.init(); // init demo features
 		   TableEditable.init();
-           UIBlockUI.init();
 		});
    </script>
 
